--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -4,6 +4,7 @@ $color-full-white: #fff;
 $color-transition-white: #fdfdfd;
 $color-light-gray: #d7d7d7;
 $color-lighter-gray: #c4c4c4;
+$color-dark-gray: #aaa;
 $color-gray: #909090;
 $color-light-black: #1a1a1a;
 $color-gradient-main-end: #1a1515;
