--- a/src/components/representation/demonstration/information/informationText/InformationText.module.scss
+++ b/src/components/representation/demonstration/information/informationText/InformationText.module.scss
@@ -5,3 +5,9 @@
 	display: flex;
 	flex-direction: column;
 }
+
+@media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
+	.info-text {
+		margin-bottom: auto-rubber-size(1600, 137, 1366)
+	}
+}
