--- a/src/components/ui/button/buttonSocial/ButtonSocial.module.scss
+++ b/src/components/ui/button/buttonSocial/ButtonSocial.module.scss
@@ -10,9 +10,24 @@
 	box-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
 	display: grid;
 	place-content: center;
+	transition: background-color $transition-animation;
 
 	&:last-child {
 		margin-right: 0;
+	}
+
+	&:hover {
+		background-color: $color-dark-gray;
+	}
+
+	&:active {
+		background-color: $color-gray;
+	}
+}
+
+@media (hover: none) {
+	.button:hover {
+		background-color: $color-lighter-gray;
 	}
 }
 
