--- a/src/components/ui/text/label/labelHello/LabelHello.module.scss
+++ b/src/components/ui/text/label/labelHello/LabelHello.module.scss
@@ -6,3 +6,10 @@
 	margin-bottom: px-to-rem(70);
 	font-size: px-to-rem(40);
 }
+
+@media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
+	.label {
+		font-size: rubber-size(1600, 40, 1366, 35);
+		margin-bottom: auto-rubber-size(1600, 40, 1366);
+	}
+}
