--- a/src/components/navbar/logo/Logo.module.scss
+++ b/src/components/navbar/logo/Logo.module.scss
@@ -31,3 +31,9 @@
 		}
 	}
 }
+
+@media only screen and (px-to-rem(1366) > width >= px-to-rem(1280)) {
+	.logo {
+		width: rubber-size(1366, 50, 1280, 45);
+	}
+}
