--- a/src/components/navbar/menu/menuItem/MenuItem.module.scss
+++ b/src/components/navbar/menu/menuItem/MenuItem.module.scss
@@ -53,3 +53,15 @@
 		}
 	}
 }
+
+@media only screen and (px-to-rem(1366) > width >= px-to-rem(1280)) {
+	.menu {
+		&-item {
+			margin-inline: rubber-size(1366, 40, 1280, 35);
+		}
+
+		&-link {
+			font-size: rubber-size(1366, 16, 1280, 15);
+		}
+	}
+}
