--- a/src/components/ui/button/buttonSocial/ButtonSocial.module.scss
+++ b/src/components/ui/button/buttonSocial/ButtonSocial.module.scss
@@ -3,11 +3,11 @@
 .button {
 	@extend %button;
 
-	width: 61px;
-	height: 56px;
-	margin-right: 30px;
+	width: px-to-rem(61);
+	height: px-to-rem(56);
+	margin-right: px-to-rem(30);
 	background-color: $color-lighter-gray;
-	box-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
+	box-shadow: 0 px-to-rem(4) px-to-rem(4) 0 rgb(0 0 0 / 25%);
 	display: grid;
 	place-content: center;
 	transition: background-color $transition-animation;
@@ -25,13 +25,37 @@
 	}
 }
 
-@media (hover: none) {
+.wrap {
+	width: px-to-rem(35);
+	aspect-ratio: 1 / 1;
+}
+
+@media only screen and (hover: none) {
 	.button:hover {
 		background-color: $color-lighter-gray;
 	}
 }
 
-.wrap {
-	width: 35px;
-	aspect-ratio: 1 / 1;
+@media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
+	.button {
+		width: rubber-size(1600, 61, 1366, 56);
+		height: rubber-size(1600, 56, 1366, 51);
+		margin-right: rubber-size(1600, 30, 1366, 25);
+	}
+
+	.wrap {
+		width: rubber-size(1600, 35, 1366, 32);
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width >= px-to-rem(1280)) {
+	.button {
+		width: rubber-size(1366, 56, 1280, 53);
+		height: rubber-size(1366, 51, 1280, 48);
+		margin-right: rubber-size(1366, 25, 1280, 20);
+	}
+
+	.wrap {
+		width: rubber-size(1366, 32, 1280, 30);
+	}
 }
