--- a/src/components/ui/text/label/labelHello/LabelHello.module.scss
+++ b/src/components/ui/text/label/labelHello/LabelHello.module.scss
@@ -10,6 +10,15 @@
 @media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
 	.label {
 		font-size: rubber-size(1600, 40, 1366, 35);
-		margin-bottom: auto-rubber-size(1600, 40, 1366);
+		margin-bottom: auto-rubber-size(1600, 70, 1366);
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width >= px-to-rem(1280)) {
+	.label {
+		$margin-bottom-auto: get-value-by-width(1600, 70, 1366);
+
+		font-size: rubber-size(1366, 35, 1280, 30);
+		margin-bottom: rubber-size(1366, $margin-bottom-auto, 1280, 45);
 	}
 }
