--- a/src/components/ui/text/label/labelProfession/LabelProfession.module.scss
+++ b/src/components/ui/text/label/labelProfession/LabelProfession.module.scss
@@ -13,3 +13,9 @@
 		font-size: rubber-size(1600, 25, 1366, 20);
 	}
 }
+
+@media only screen and (px-to-rem(1366) > width >= px-to-rem(1280)) {
+	.label {
+		font-size: rubber-size(1366, 20, 1280, 18);
+	}
+}
