--- a/src/components/ui/text/label/labelWho/LabelWho.module.scss
+++ b/src/components/ui/text/label/labelWho/LabelWho.module.scss
@@ -12,3 +12,9 @@
 		font-size: rubber-size(1600, 60, 1366, 50);
 	}
 }
+
+@media only screen and (px-to-rem(1366) > width >= px-to-rem(1280)) {
+	.label {
+		font-size: rubber-size(1366, 50, 1280, 45);
+	}
+}
