'Representation' and 'Navbar' components adapted from 1280px to 1080px

--- a/src/components/navbar/logo/Logo.module.scss
+++ b/src/components/navbar/logo/Logo.module.scss
@@ -37,3 +37,9 @@
 		width: rubber-size(1366, 50, 1280, 45);
 	}
 }
+
+@media only screen and (px-to-rem(1280) > width >= px-to-rem(1080)) {
+	.logo {
+		width: rubber-size(1280, 45, 1080, 40);
+	}
+}
