--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -77,6 +77,23 @@
 	}
 }
 
+@media only screen and (px-to-rem(1280) > width >= px-to-rem(1080)) {
+	.navbar {
+		$width-nav: rubber-size(1280, 1134, 1080, 970);
+
+		width: $width-nav;
+		margin-inline: calc(50% - ($width-nav / 2));
+		padding-block: rubber-size(1280, 25, 1080, 20);
+
+		&.fixed {
+			$margin-inline-nav: rubber-size(1280, 35, 1080, 25);
+
+			width: calc(100% - ($margin-inline-nav * 2));
+			margin-inline: $margin-inline-nav;
+		}
+	}
+}
+
 .menu {
 	width: 100%;
 	height: 100%;
