--- a/src/components/navbar/menu/menuItem/MenuItem.module.scss
+++ b/src/components/navbar/menu/menuItem/MenuItem.module.scss
@@ -65,3 +65,15 @@
 		}
 	}
 }
+
+@media only screen and (px-to-rem(1280) > width >= px-to-rem(1080)) {
+	.menu {
+		&-item {
+			margin-inline: rubber-size(1280, 35, 1080, 30);
+		}
+
+		&-link {
+			font-size: rubber-size(1280, 15, 1080, 14);
+		}
+	}
+}
