--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -94,6 +94,23 @@
 	}
 }
 
+@media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
+	.navbar {
+		$width-nav: rubber-size(1080, 970, 900, 825);
+
+		width: $width-nav;
+		margin-inline: calc(50% - ($width-nav / 2));
+		padding-block: px-to-rem(20);
+
+		&.fixed {
+			$margin-inline-nav: rubber-size(1080, 25, 900, 20);
+
+			width: calc(100% - ($margin-inline-nav * 2));
+			margin-inline: $margin-inline-nav;
+		}
+	}
+}
+
 .menu {
 	width: 100%;
 	height: 100%;
