--- a/src/components/navbar/logo/Logo.module.scss
+++ b/src/components/navbar/logo/Logo.module.scss
@@ -43,3 +43,9 @@
 		width: rubber-size(1280, 45, 1080, 40);
 	}
 }
+
+@media only screen and (px-to-rem(1280) > width >= px-to-rem(900)) {
+	.logo {
+		width: px-to-rem(40);
+	}
+}
