--- a/src/components/representation/Representation.module.scss
+++ b/src/components/representation/Representation.module.scss
@@ -30,3 +30,9 @@
 		height: rubber-size(1280, 750, 1080, 650);
 	}
 }
+
+@media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
+	.representation {
+		height: px-to-rem(650);
+	}
+}
