--- a/src/components/ui/text/label/labelProfession/LabelProfession.module.scss
+++ b/src/components/ui/text/label/labelProfession/LabelProfession.module.scss
@@ -25,3 +25,9 @@
 		font-size: rubber-size(1280, 18, 1080, 15);
 	}
 }
+
+@media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
+	.label {
+		font-size: px-to-rem(15);
+	}
+}
