Fixed a bug where the black part was displayed incorrectly when changing the screen size

--- a/src/components/representation/demonstration/Demonstration.module.scss
+++ b/src/components/representation/demonstration/Demonstration.module.scss
@@ -50,7 +50,7 @@
 
 @media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
 	.images {
-		width: px-to-rem(630);
+		width: rubber-size(1080, 630, 900, 540);
 		margin-right: px-to-rem(10);
 	}
 }
