--- a/src/components/representation/demonstration/information/Information.module.scss
+++ b/src/components/representation/demonstration/information/Information.module.scss
@@ -36,7 +36,7 @@
 
 @media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
 	.information {
-		$width-demo: px-to-rem(970);
+		$width-demo: rubber-size(1080, 970, 900, 825);
 
 		margin-top: px-to-rem(70);
 		margin-left: calc(50% - ($width-demo / 2));
