--- a/src/components/ui/text/label/labelHello/LabelHello.module.scss
+++ b/src/components/ui/text/label/labelHello/LabelHello.module.scss
@@ -32,7 +32,7 @@
 
 @media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
 	.label {
-		font-size: px-to-rem(25);
-		margin-bottom: px-to-rem(45);
+		font-size: rubber-size(1080, 25, 900, 22);
+		margin-bottom: rubber-size(1080, 45, 900, 35);
 	}
 }
