Fixed a bug due to which information labels in the 'Representation' component were displayed incorrectly when changing the screen size

--- a/src/components/representation/Representation.module.scss
+++ b/src/components/representation/Representation.module.scss
@@ -33,6 +33,6 @@
 
 @media only screen and (px-to-rem(1080) > width >= px-to-rem(900)) {
 	.representation {
-		height: px-to-rem(650);
+		height: rubber-size(1080, 650, 900, 550);
 	}
 }
