The 'Navbar' component adapted from 900px to 768px

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -15,3 +15,9 @@
 		}
 	}
 }
+
+@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+	.header {
+		background-color: $color-header-black;
+	}
+}
