--- a/src/components/navbar/menu/menuItem/MenuItem.module.scss
+++ b/src/components/navbar/menu/menuItem/MenuItem.module.scss
@@ -89,3 +89,15 @@
 		}
 	}
 }
+
+@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+	.menu {
+		&-item {
+			margin-inline: px-to-rem(22);
+		}
+
+		&-link {
+			font-size: px-to-rem(12);
+		}
+	}
+}
