--- a/src/components/navbar/logo/Logo.module.scss
+++ b/src/components/navbar/logo/Logo.module.scss
@@ -49,3 +49,11 @@
 		width: px-to-rem(40);
 	}
 }
+
+@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+	.logo {
+		width: px-to-rem(35);
+		-webkit-filter: invert(100%);
+		filter: invert(100%)
+	}
+}
