The 'Representation' component adapted from 900px to 768px

--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -50,3 +50,4 @@
 @include imp-font($font-opensans, ('Regular': 400, 'Light': 300));
 @include imp-font($font-nunito, ('Bold': 700));
 @include imp-font($font-roboto, ('Regular': 400));
+@include imp-font($font-adventpro, ('Regular': 400));
