--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -11,6 +11,7 @@ $color-gradient-main-end: #1a1515;
 $color-header-black: #0b0b0b;
 $color-gradient-main-begin: #010101;
 $color-full-black: #000;
+$color-transparent: transparent;
 
 $path-font: './../fonts';
 $font-space: '-';
