--- a/src/components/representation/background/Background.module.scss
+++ b/src/components/representation/background/Background.module.scss
@@ -73,3 +73,21 @@
 		width: $width-detail;
 	}
 }
+
+@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+	.mobile {
+		&-effects {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background: linear-gradient(180deg, rgb(0 0 0 / 60%) 0%, rgb(0 0 0 / 60%) 15.1%, rgb(0 0 0 / 60%) 100%), radial-gradient(45.13% 44.99% at 54.86% 47.98%, rgb(19 19 19 / 2%) 0%, rgb(14 0 0 / 67%) 100%);
+			z-index: 2;
+		}
+
+		&-image {
+			position: absolute !important;
+			object-fit: cover !important;
+			z-index: 1 !important;
+		}
+	}
+}
