--- a/src/components/representation/demonstration/information/Information.module.scss
+++ b/src/components/representation/demonstration/information/Information.module.scss
@@ -7,6 +7,14 @@
 	margin-left: calc(50% - ($width-demo / 2));
 }
 
+.separator {
+	filter: invert(100%);
+
+	&-wrap {
+		margin-bottom: 40px;
+	}
+}
+
 @media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
 	.information {
 		$width-demo: rubber-size(1600, 1380, 1366, 1220);
@@ -40,5 +48,16 @@
 
 		margin-top: px-to-rem(70);
 		margin-left: calc(50% - ($width-demo / 2));
+	}
+}
+
+@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+	.information {
+		margin-top: 0;
+		margin-left: 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: flex-start;
 	}
 }
