--- a/src/components/ui/button/buttonSocial/ButtonSocial.module.scss
+++ b/src/components/ui/button/buttonSocial/ButtonSocial.module.scss
@@ -83,3 +83,18 @@
 		width: px-to-rem(27);
 	}
 }
+
+@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+	.button {
+		width: px-to-rem(30);
+		height: unset;
+		aspect-ratio: 1 / 1;
+		margin-right: px-to-rem(30);
+		background-color: $color-transparent;
+	}
+
+	.wrap {
+		width: 100%;
+		filter: invert(100%)
+	}
+}
