The 'Navbar' component adapted from 768px to 576px

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -16,8 +16,15 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.header {
 		background-color: $color-header-black;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.header {
+		display: flex;
+		align-items: center;
 	}
 }
