--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -30,6 +30,16 @@
 	}
 }
 
+.menu {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	list-style: none;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
 @media only screen and (px-to-rem(1920) > width >= px-to-rem(1600)) {
 	.navbar {
 		padding-block: rubber-size(1920, 65, 1600, 35);
@@ -111,7 +121,7 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.navbar {
 		$margin-inline-rem: px-to-rem(30);
 
@@ -121,11 +131,11 @@
 	}
 }
 
-.menu {
-	width: 100%;
-	height: 100%;
-	list-style: none;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+@media only screen and (px-to-rem(768) > width) {
+	.navbar {
+		$margin-inline-rem: px-to-rem(30);
+
+		width: calc(100% - $margin-inline-rem);
+		margin-inline: $margin-inline-rem 0;
+	}
 }
