--- a/src/components/navbar/logo/Logo.module.scss
+++ b/src/components/navbar/logo/Logo.module.scss
@@ -50,7 +50,7 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.logo {
 		width: px-to-rem(35);
 		-webkit-filter: invert(100%);
