--- a/src/components/representation/background/Background.module.scss
+++ b/src/components/representation/background/Background.module.scss
@@ -74,7 +74,7 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.mobile {
 		&-effects {
 			position: absolute;
