--- a/src/components/representation/demonstration/information/Information.module.scss
+++ b/src/components/representation/demonstration/information/Information.module.scss
@@ -51,7 +51,7 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.information {
 		margin-top: 0;
 		margin-left: 0;
