--- a/src/components/representation/demonstration/information/informationText/InformationText.module.scss
+++ b/src/components/representation/demonstration/information/informationText/InformationText.module.scss
@@ -32,7 +32,7 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.info-text {
 		margin-bottom: px-to-rem(25);
 	}
