--- a/src/components/ui/text/label/labelWho/LabelWho.module.scss
+++ b/src/components/ui/text/label/labelWho/LabelWho.module.scss
@@ -32,7 +32,7 @@
 	}
 }
 
-@media only screen and (px-to-rem(900) > width >= px-to-rem(768)) {
+@media only screen and (px-to-rem(900) > width) {
 	.label {
 		margin-bottom: px-to-rem(5);
 		font-family: $font-adventpro;
