--- a/src/components/navbar/menu/menuItem/MenuItem.module.scss
+++ b/src/components/navbar/menu/menuItem/MenuItem.module.scss
@@ -24,8 +24,10 @@
 		color: $color-full-white;
 		text-decoration: none;
 
-		&:hover {
-			text-decoration: underline;
+		@media only screen and (hover :hover) {
+			.menu-link:hover {
+				text-decoration: underline;
+			}
 		}
 	}
 }
@@ -105,7 +107,23 @@
 @media only screen and (px-to-rem(768) > width) {
 	.menu {
 		&-item {
+			width: 100%;
 			margin-inline: 0;
+			display: block;
+			place-content: unset;
+		}
+
+		&-link {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			&:active {
+				background-color: $color-full-white;
+				color: $color-full-black;
+			}
 		}
 	}
 }
