--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -5,6 +5,7 @@
 	flex: $flex-main;
 	align-self: center;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 
