--- a/src/components/ui/text/heading/Heading.module.scss
+++ b/src/components/ui/text/heading/Heading.module.scss
@@ -1,11 +1,13 @@
 @use '@sass/main' as *;
 
 .heading {
-	padding: 30px 90px;
-	border: 8px solid $color-full-black;
+	$ratio: px-to-rem(30);
+
+	padding: $ratio ($ratio * 2);
+	border: px-to-rem(8) solid $color-full-black;
 	font-family: $font-montserrat;
 	font-weight: 700;
-	font-size: 30px;
+	font-size: px-to-rem(30);
 	line-height: 128%;
 	letter-spacing: 0.36em;
 	text-transform: uppercase;
@@ -13,4 +15,44 @@
 	color: $color-full-black;
 	display: grid;
 	place-content: center;
+}
+
+@media only screen and (px-to-rem(1600) > width) {
+	.heading {
+		$ratio: rubber-size(1600, 30, 1366, 25);
+		$border-size: rubber-size(1600, 8, 1366, 6);
+		$text-size: rubber-size(1600, 30, 1366, 25);
+
+		padding: $ratio calc($ratio * 2);
+		border: $border-size solid $color-full-black;
+		font-size: $text-size;
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	;
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	;
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	;
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	;
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	;
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	;
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	;
 }
