--- a/src/components/ui/text/heading/Heading.module.scss
+++ b/src/components/ui/text/heading/Heading.module.scss
@@ -21,38 +21,44 @@
 	.heading {
 		$ratio: rubber-size(1600, 30, 1366, 25);
 		$border-size: rubber-size(1600, 8, 1366, 6);
-		$text-size: rubber-size(1600, 30, 1366, 25);
 
 		padding: $ratio calc($ratio * 2);
 		border: $border-size solid $color-full-black;
-		font-size: $text-size;
+		font-size: rubber-size(1600, 30, 1366, 25);
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	;
-}
-
-@media only screen and (px-to-rem(1280) > width) {
-	;
-}
-
 @media only screen and (px-to-rem(1080) > width) {
-	;
+	.heading {
+		$ratio: rubber-size(1080, 25, 900, 23);
+		$border-size: rubber-size(1080, 6, 900, 5);
+
+		padding: $ratio calc($ratio * 2);
+		border: $border-size solid $color-full-black;
+		font-size: rubber-size(1080, 25, 900, 23);
+	}
 }
 
 @media only screen and (px-to-rem(900) > width) {
-	;
+	.heading {
+		;
+	}
 }
 
 @media only screen and (px-to-rem(768) > width) {
-	;
+	.heading {
+		;
+	}
 }
 
 @media only screen and (px-to-rem(576) > width) {
-	;
+	.heading {
+		;
+	}
 }
 
 @media only screen and (px-to-rem(480) > width) {
-	;
+	.heading {
+		;
+	}
 }
