--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -85,8 +85,12 @@
 }
 
 @media only screen and (px-to-rem(576) > width) {
-	.about {
-		;
+	.quote {
+		$width: calc((576 - 425) / 2);
+		$margin-size: auto-rubber-size(576, $width, 480);
+
+		width: calc(100% - ($margin-size * 2));
+		margin-inline: $margin-size;
 	}
 }
 
